js/src/tests/test262/built-ins/Error/cause_abrupt.js
var
message
=
"
my
-
message
"
;
var
options
;
options
=
new
Proxy
(
{
}
{
has
(
target
prop
)
{
if
(
prop
=
=
=
"
cause
"
)
{
throw
new
Test262Error
(
"
HasProperty
"
)
;
}
return
prop
in
target
;
}
}
)
;
assert
.
throws
(
Test262Error
function
(
)
{
new
Error
(
message
options
)
;
}
"
HasProperty
"
)
;
options
=
{
get
cause
(
)
{
throw
new
Test262Error
(
"
Get
Cause
"
)
;
}
}
;
assert
.
throws
(
Test262Error
function
(
)
{
new
Error
(
message
options
)
;
}
"
Get
Cause
"
)
;
reportCompare
(
0
0
)
;
